[package]
name = "http"
version = "0.1.0"
authors = ["Antoine BAGNAUD <bagnaud.antoine@gmail.com>"]

[dependencies]
domain = { version = "*", path = "../domain" }
rocket = "0.3.14"
rocket_codegen = "0.3.14"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
